fixed some bugs
the authorize dialog wasnt displaying at the right times so thats fixed now, and just amde the styling a bit better, instead of a popup that covers the entire screen, its just a part of the github- related graphs

--- a/Frontend/nextjs-dashboard/app/ui/stylesheets/githubAppAuthorizationDialog.css
+++ b/Frontend/nextjs-dashboard/app/ui/stylesheets/githubAppAuthorizationDialog.css
@@ -1,15 +1,15 @@
 #backdrop {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black for backdrop */
     z-index: 9998; /* Just below the dialog */
 }
 
 #github-app-authorization-dialog {
-    position: fixed;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
