--- a/Frontend/nextjs-dashboard/app/ui/stylesheets/metrics.css
+++ b/Frontend/nextjs-dashboard/app/ui/stylesheets/metrics.css
@@ -48,7 +48,7 @@
     flex-direction: column;
     gap: 20px;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1100px;
 }
 
 .chart-container {
